--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
+    "promptpay-qr": "^0.4.4",
     "qrcode": "^1.4.4",
     "redis": "^3.1.2",
     "tesseract.js": "^2.1.5"
